# AIGC-NetNov

./: .gitignore  .gitmodules  FIX_PROGRESS.md  aidl_test.txt  build58_log.txt  build_errors.txt  build_errors2.txt  build_kotlin.txt  build_output.txt  check_build_status.ps1  check_ci.py  check_ci2.py  chinese_strings_detailed.txt  errors.txt  errors_only.txt  fix_sdk_ndk_config.ps1  full_diff.txt  gradle.properties  move_to_english_path.ps1  packages_whitelist.txt  settings.gradle.kts
.github/workflows/: build.yml
.workbuddy/memory/: BUILD_FIX_PROGRESS.md
AIGC-NetNov/: .gitignore  QA_REPORT.md  TEST_EXECUTION_LOG.md  gradle.properties  package-lock.json  package.json  settings.gradle.kts
AIGC-NetNov/.codebuddy/automations/github-build-monitor/: memory.md
AIGC-NetNov/.github/workflows/: build.yml
AIGC-NetNov/app/: build.gradle.kts
AIGC-NetNov/docs/package_dev/: system.md
AIGC-NetNov/examples/apktool/: manifest.json
AIGC-NetNov/examples/novelide/: QA_REPORT.md  build.js  package-lock.json  package.json  run_all_tests.js  run_tests.js  test_results_1782337149204.json
AIGC-NetNov/examples/novelide/docs/: ISSUE_CHECKLIST.md  NATIVE_BRIDGE_API.md  PROGRESS_REPORT.md
AIGC-NetNov/examples/novelide/src/: main.ts
AIGC-NetNov/examples/novelide/tests/: novel_tools.test.ts  performance.test.ts
AIGC-NetNov/examples/types/: results.d.ts  software_settings.d.ts  system.d.ts  tool-types.d.ts  toolpkg.d.ts
AIGC-NetNov/quickjs/: build.gradle.kts
AIGC-NetNov/quickjs/test_build2/: .ninja_deps  .ninja_log  build.ninja
UI/: manifest.json
UI/resources/webapp/: AI聊天.html  完整版.html  完整版_backup_apple_hig.html  审计报告_UI对接.md.html  浮动窗口.html  番茄预设管理.html  角色关系图.html
UI/src/: main.ts
UI/src/lib/: ai_bridge.ts  db_bridge.ts  prompt_templates.ts
UI/src/ui/: novel_editor_page.ts  novel_materials.ui.ts  novel_outline.ui.ts  novel_relationship.ui.ts  novel_stats_page.ts  novel_tomato_page.ts  novel_works_page.ts  novel_workspace.ui.ts
app/: build.gradle.kts  proguard-rules.pro  release.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
ci_logs/: 0_build.txt
docs/: phase3_implementation_plan.md  thinking_chain_integration_plan.md
dragonbones/: build.gradle.kts
examples/: operit_editor.ts
examples/novelide/: PERFORMANCE_REPORT.md  tsconfig.json
examples/novelide/docs/: FIX_GUIDE.md
examples/novelide/resources/editor/: index.html
examples/novelide/resources/webapp/: AI聊天.html  editor.css  editor.js  关于协议.html  (+15 more)
examples/novelide/src/: main.ts
examples/novelide/tests/: native_bridge_integration.test.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
llama/: build.gradle.kts
mmd/: build.gradle.kts
mnn/: build.gradle.kts
quickjs/: build.gradle.kts
软件改造计划/: 00_规划总览与决策统一.md  01_NavItem扩展.md  02_侧边栏分组.md  03_工作区文件系统.md  04_数据模型.md  05_编辑器WebView.md  06_多Agent系统.md  07_AI工具注册.md  08_屏幕注册.md  09b_数据层.md  09c_Agent系统.md  09d_工具注册.md  09e_UI层.md  10_系统架构（Kotlin版）.md  11_ToolPkg与原生层职责对照表.md  12_完整开发阶段.md  13_详细测试用例.md  14_安全设计.md  AIGC-NetNov项目进度报告.md  Operit网文写作改造计划.md  管理终端系统设计.md  系统架构图.md  语音系统.md
(+1166 files in other folders)
